--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"axios": "^0.19.0",
 		"normalize.css": "^8.0.1",
+		"prop-types": "^15.7.2",
 		"query-string": "^6.8.2",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
@@ -18,7 +19,7 @@
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"lint": "eslint \"src/**/*.js\"",
-		"lint:fix": "prettier \"src/**/*.js\" --write"
+		"lint:fix": "prettier \"src/**/*.js\" --write && eslint \"src/**/*.js\" --fix"
 	},
 	"husky": {
 		"hooks": {
