show node_modules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,7 @@
   "eslint.autoFixOnSave": true,
   "files.exclude": {
     "**/.git": true,
-    // "**/.gitignore": true
-    // "**/.prettierrc": true,
+    "**/.prettierrc": true,
     "**/.editorconfig": true,
     "**/jsconfig.json": true,
     "**/.prettierignore": true,
@@ -14,7 +13,6 @@
     "**/.DS_Store": true,
     "**/.eslintrc.js": true,
     "**/.eslintignore": true,
-    "**/node_modules": true,
     "**/.vscode": true
   }
 }
