--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
 	"private": true,
 	"dependencies": {
 		"axios": "^0.19.0",
+		"bootswatch": "^4.3.1",
+		"font-awesome": "^4.7.0",
 		"normalize.css": "^8.0.1",
 		"prop-types": "^15.7.2",
 		"query-string": "^6.8.2",
 		"react": "^16.9.0",
+		"react-bootstrap": "^1.0.0-beta.12",
 		"react-dom": "^16.9.0",
 		"react-router-dom": "^5.0.1",
 		"react-scripts": "3.1.1",
+		"react-socket-io": "^0.2.5",
+		"socket.io-client": "^2.2.0",
 		"styled-components": "^4.3.2"
 	},
 	"scripts": {
