--- a/package.json
+++ b/package.json
@@ -65,5 +65,13 @@
 		"husky": "^3.0.5",
 		"lint-staged": "^9.2.5",
 		"prettier": "^1.18.2"
+	},
+	"cssnano": {
+		"preset": [
+			"default",
+			{
+				"calc": false
+			}
+		]
 	}
 }
